--- a/kocom.yaml
+++ b/kocom.yaml
@@ -83,52 +83,72 @@ logger:
 
 light:
   # 안방 조명 1 (Room 1 - Master Bedroom Light 1)
-  - platform: uartex
+  - platform: template
     name: "Master Bedroom Light 1"
     id: master_bedroom_light_1
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 8
-      data: [0xff]
-    state_off:
-      offset: 8
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 2h
+    optimistic: true
+    turn_on_action:
+      - if:
+          condition:
+            light.is_on: master_bedroom_light_2
+          then:
+            # 조명 2가 켜져있으면 둘 다 켜기
+            - uartex.write:
+                data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0xff, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+                ack: [0x30, 0xdc]
+          else:
+            # 조명 1만 켜기
+            - uartex.write:
+                data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+                ack: [0x30, 0xdc]
+    turn_off_action:
+      - if:
+          condition:
+            light.is_on: master_bedroom_light_2
+          then:
+            # 조명 2는 켜진 상태 유지, 조명 1만 끄기
+            - uartex.write:
+                data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+                ack: [0x30, 0xdc]
+          else:
+            # 둘 다 끄기
+            - uartex.write:
+                data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+                ack: [0x30, 0xdc]
 
   # 안방 조명 2 (Room 1 - Master Bedroom Light 2)
-  - platform: uartex
+  - platform: template
     name: "Master Bedroom Light 2"
     id: master_bedroom_light_2
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 9
-      data: [0xff]
-    state_off:
-      offset: 9
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 2h
+    optimistic: true
+    turn_on_action:
+      - if:
+          condition:
+            light.is_on: master_bedroom_light_1
+          then:
+            # 조명 1이 켜져있으면 둘 다 켜기
+            - uartex.write:
+                data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0xff, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+                ack: [0x30, 0xdc]
+          else:
+            # 조명 2만 켜기
+            - uartex.write:
+                data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+                ack: [0x30, 0xdc]
+    turn_off_action:
+      - if:
+          condition:
+            light.is_on: master_bedroom_light_1
+          then:
+            # 조명 1은 켜진 상태 유지, 조명 2만 끄기
+            - uartex.write:
+                data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+                ack: [0x30, 0xdc]
+          else:
+            # 둘 다 끄기
+            - uartex.write:
+                data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+                ack: [0x30, 0xdc]
     
   # 세나방 (Room 2)
   - platform: uartex
