--- a/kocom.yaml
+++ b/kocom.yaml
@@ -321,9 +321,11 @@ light:
     update_interval: 2h
     
   # 거실 조명 (Room 0) - 단일 조명
+light:
+  # 거실 조명 1 (Room 0 - Living Room Light 1)
   - platform: uartex
-    name: "Living Room Light"
-    id: living_room_light
+    name: "Living Room Light 1"
+    id: living_room_light_1
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x00]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
@@ -333,12 +335,40 @@ light:
     state_off:
       offset: 8
       data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+    command_on: !lambda |-
+      uint8_t light2_state = id(living_room_light_2).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0xff, light2_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_off: !lambda |-
+      uint8_t light2_state = id(living_room_light_2).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0x00, light2_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+    update_interval: 2h
+
+  # 거실 조명 2 (Room 0 - Living Room Light 2)
+  - platform: uartex
+    name: "Living Room Light 2"
+    id: living_room_light_2
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x00]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 9
+      data: [0xff]
+    state_off:
+      offset: 9
+      data: [0x00]
+    command_on: !lambda |-
+      uint8_t light1_state = id(living_room_light_1).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, light1_state, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_off: !lambda |-
+      uint8_t light1_state = id(living_room_light_1).current_values.is_on() ? 0xff : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, light1_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
+    update_interval: 2h
 
 
   # 안방화장실 조명 2 (Room 2)
