--- a/kocom.yaml
+++ b/kocom.yaml
@@ -125,10 +125,7 @@ light:
     command_off: !lambda |-
       uint8_t light1_state = id(master_bedroom_light_1).current_values.is_on() ? 0xff : 0x00;
       return {{0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, light1_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 2h
+  # command_update 삭제! (조명 1이 업데이트할 때 같이 업데이트됨)
     
   # 세나방 (Room 2)
   - platform: uartex
@@ -363,57 +360,7 @@ light:
     command_off: !lambda |-
       uint8_t light1_state = id(living_room_light_1).current_values.is_on() ? 0xff : 0x00;
       return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, light1_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 2h
-
-
-  # 안방화장실 조명 2 (Room 2)
-  - platform: uartex
-    name: "Master Bathroom Light 2"
-    id: master_bathroom_light_2
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x02]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 9
-      data: [0xff]
-    state_off:
-      offset: 9
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-
-  # 안방화장실 조명 3 (Room 2)
-  - platform: uartex
-    name: "Master Bathroom Light 3"
-    id: master_bathroom_light_3
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x02]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 10
-      data: [0xff]
-    state_off:
-      offset: 10
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-
- 
-
-
-    
-
+    # command_update 삭제! (조명 1이 업데이트할 때 같이 업데이트됨)
 
   # 주방 조명 (Room 6)
   - platform: uartex
@@ -435,24 +382,7 @@ light:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x06, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
 
-  - platform: uartex
-    name: "Guest Bathroom Light 2"
-    id: guest_bathroom_light_2
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x06]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 9
-      data: [0xff]
-    state_off:
-      offset: 9
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x06, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x06, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
+
 
 switch:
   # 거실화장실 환기팬 (Room 5) - 조명과 같은 디바이스지만 다른 offset 사용
