--- a/kocom.yaml
+++ b/kocom.yaml
@@ -112,7 +112,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h
+    update_interval: 120min
 
   # 안방 조명 2 (Room 1 - Master Bedroom Light 2)
   - platform: uartex
@@ -157,7 +157,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h3min
+    update_interval: 123min
 
  # 사라방 조명 (Room 3)
   - platform: uartex
@@ -181,7 +181,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x03, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h6min
+    update_interval: 126min
 
   # 알파룸 (Room 4)
 # 전등 상태 확인과 제어용 패킷 설명
@@ -251,7 +251,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x04, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h9min
+    update_interval: 129min
 
   # 주방 조명 1
   - platform: uartex
@@ -275,7 +275,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h12min
+    update_interval: 132min
 
   # 주방 조명 2
   - platform: uartex
@@ -299,7 +299,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h15min
+    update_interval: 135min
 
   # 주방 조명 3
   - platform: uartex
@@ -323,7 +323,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h18min
+    update_interval: 138min
     
   # 거실 조명 1 (Room 0 - Living Room Light 1)
   - platform: uartex
@@ -347,7 +347,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h21min
+    update_interval: 141min
 
   # 거실 조명 2 (Room 0 - Living Room Light 2)
   - platform: uartex
